--- a/Codebase/Typerr/Typerr.csproj
+++ b/Codebase/Typerr/Typerr.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Meziantou.WpfFontAwesome" Version="5.15.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
