Added Modes to TestPreviewViewModel

--- a/Codebase/Typerr/Typerr.csproj
+++ b/Codebase/Typerr/Typerr.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.4.0" />
     <PackageReference Include="MahApps.Metro.IconPacks" Version="4.11.0" />
     <PackageReference Include="Meziantou.WpfFontAwesome" Version="5.15.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
